// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionDropdown > should be block styling 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-md action-btn-block"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should be disabled 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-blue action-btn-lg disabled"
      disabled=""
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should have a ghost kind with a blue variant 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-blue action-btn-sm"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should have a lg size 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-gray action-btn-lg"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should have a md size 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-md"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should have a primary kind with a gray variant 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-gray action-btn-sm"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should have a secondary kind with a red variant 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-sm"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should have an xs size 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-blue action-btn-xs"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should have the proper title 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-gray action-btn-sm"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      Title for the action dropdown
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should hide the arrow 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-md"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <!--v-if-->
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should match its default snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-gray action-btn-sm"
      id="unique-id"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should match its kind ghost, variant white snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-white action-btn-sm"
      id="m8roog87ctwxce0zlag"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should match its kind primary, variant white snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-white action-btn-sm"
      id="m8roog7wesfgwvmswje"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;

exports[`ActionDropdown > should match its kind secondary, variant white snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-white action-btn-sm"
      id="m8roog80y3ql47okmg8"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        class="inline-block self-center w-5 h-5 -mr-1"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    
    
  </div>
  <!---->
</div>
`;
